[gd_scene load_steps=5 format=3 uid="uid://diy3jbyava83y"]

[ext_resource type="Script" uid="uid://rmlw881e57gp" path="res://canvas_layer.gd" id="1_v2lfg"]

[sub_resource type="LabelSettings" id="LabelSettings_wf015"]
font_size = 22

[sub_resource type="LabelSettings" id="LabelSettings_v2lfg"]
font_size = 36
outline_size = 2

[sub_resource type="LabelSettings" id="LabelSettings_tg4cr"]
font_size = 64
outline_size = 4

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_v2lfg")

[node name="Label" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -72.0
offset_right = 156.0
offset_bottom = -41.0
grow_vertical = 0
text = "Player Health:"
label_settings = SubResource("LabelSettings_wf015")

[node name="Label2" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -162.0
offset_top = -72.0
offset_right = -8.0
offset_bottom = -41.0
grow_horizontal = 0
grow_vertical = 0
text = "Enemy Health:"
label_settings = SubResource("LabelSettings_wf015")

[node name="Label3" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -50.0
offset_right = 90.0
grow_vertical = 0
text = "9999"
label_settings = SubResource("LabelSettings_v2lfg")

[node name="Label4" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -90.0
offset_top = -50.0
offset_right = -8.0
grow_horizontal = 0
grow_vertical = 0
text = "9999"
label_settings = SubResource("LabelSettings_v2lfg")
horizontal_alignment = 2

[node name="Label5" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.5
offset_top = -44.0
offset_right = 135.5
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
text = "You Win!"
label_settings = SubResource("LabelSettings_tg4cr")

[node name="Label6" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.5
offset_top = -44.0
offset_right = 165.5
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
text = "You Lose :("
label_settings = SubResource("LabelSettings_tg4cr")

[node name="Button" type="Button" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.5
offset_top = 45.0
offset_right = 70.5
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 26
text = "Restart"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
